Redactada introducción cap 4 (#46)

--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -100,6 +100,11 @@
 
 \import{tex/capitulos/}{capitulo-3.tex}
 
+\chapter{Sistemas de Funciones Iteradas}
+\label{chap:SFI}
+
+\import{tex/capitulos/}{capitulo-4.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
