--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -12,6 +12,7 @@
 \bibitem{Atkinson} Atkinson, K; Han, W. (2009). \textit{Theoretical Numerical Analysis: A Functional Analysis Framework} (3rd ed. 2009). Springer New York. \url{https://doi.org/10.1007/978-1-4419-0458-4}
 \bibitem{Dubeau-Gnang} Dubeau, F.; Gnang, C. (2018). Fixed Point and Newton’s Methods in the Complex Plane. \textit{Journal of Complex Analysis, 2018}, 1–11. \url{https://doi.org/10.1155/2018/7289092}
 \bibitem{John-Milnor} Milnor, J. (2006). \textit{Dynamics in one complex variable.} (3rd ed.). Princeton University Press. \url{https://doi.org/10.1515/9781400835539}
+\bibitem{Barnsley} Barnsley, M; Rising, H. (1993). \textit{Fractals everywhere} (2nd ed.). Academic Press.
 
 
 \end{thebibliography}
