Redactado hasta la métrica de Hausdorff (#46)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -253,6 +253,7 @@ Por su parte, la curva de Koch se compone de 4 copias de sí misma, cada una a e
 El concepto de dimensión fractal autosimilar tiene el defecto de que está limitado únicamente a objetos totalmente autosimilares, pero la mayoría de objetos no cumple esta propiedad. Para solucionar este problema, introduciremos un nuevo concepto de dimensión. Previamente definimos un término necesario en las futuras definiciones.
 
 \begin{definicion}
+  \label{def:diametro}
 Dado un subconjunto $U$ de $\R^n$, definimos su \textbf{diámetro} como:
 $$
 \diam(U)=\sup \left\lbrace d(x,y): x,y\in U\right\rbrace .
