Cambio pequeño error (#46)

--- a/memoria/tex/capitulos/capitulo-4.tex
+++ b/memoria/tex/capitulos/capitulo-4.tex
@@ -178,7 +178,7 @@ El problema es que esta definición no nos basta para definir una distancia entr
 
 En adelante denotaremos únicamente $h(\cdot,\cdot)$, omitiendo la dependencia de la distancia del espacio original.
 
-Podemos comprobar en \cite{Barnsley}[Sección 2.6] que, en efecto, $h$ es una distancia. Además, en \cite{Barnsley}[Sección 2.7] se prueba que el espacio métrico $(\mathcal{H}(X), h(d))$ es un espacio de Banach.
+Podemos comprobar en \cite{Barnsley}[Sección 2.6] que, en efecto, $h$ es una distancia. Además, en \cite{Barnsley}[Sección 2.7] se prueba que el espacio métrico $(\mathcal{H}(X), h(d))$ es completo.
 
 
 
