--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -100,6 +100,11 @@
 
 \import{tex/capitulos/}{capitulo-3.tex}
 
+\chapter{Introducción a las herramientas de renderización}
+\label{chap:renderizacion}
+
+\import{tex/capitulos/}{capitulo-5.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
