--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -13,5 +13,26 @@
 \bibitem{Dubeau-Gnang} Dubeau, F.; Gnang, C. (2018). Fixed Point and Newton’s Methods in the Complex Plane. \textit{Journal of Complex Analysis, 2018}, 1–11. \url{https://doi.org/10.1155/2018/7289092}
 \bibitem{John-Milnor} Milnor, J. (2006). \textit{Dynamics in one complex variable.} (3rd ed.). Princeton University Press. \url{https://doi.org/10.1515/9781400835539}
 
+\bibitem{MDN-1} \textit{Adding 2D content to a WebGL context - Web APIs | MDN}. (2022, 24 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Adding_2D_content_to_a_WebGL_context}
+
+\bibitem{wikipedia-webgl} colaboradores de Wikipedia. (2022, 16 febrero). \textit{WebGL}. Wikipedia, la enciclopedia libre. \url{https://es.wikipedia.org/wiki/WebGL}
+
+
+
+\bibitem{MDN-2} \textit{Data in WebGL - Web APIs | MDN.} (2022, 14 marzo). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Data}
+
+\bibitem{MDN-3} \textit{Getting started with WebGL - Web APIs | MDN.} (2022, 24 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Getting_started_with_WebGL}
+
+\bibitem{learn-opengl} \textit{LearnOpenGL - OpenGL.} (s. f.). OpenGL. \url{https://learnopengl.com/Getting-started/OpenGL}
+
+\bibitem{khronos} \textit{OpenGL ES - The Standard for Embedded Accelerated 3D Graphics}. (2011, 19 julio). The Khronos Group. \url{https://www.khronos.org/api/opengles}
+
+\bibitem{MDN-4} \textit{WebGL: 2D and 3D graphics for the web - Web APIs | MDN}. (2022, 27 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API}
+
+\bibitem{HTML5rocks} \textit{WebGL Fundamentals - HTML5 Rocks.} (s. f.). HTML5 Rocks - A Resource for Open Web HTML5 Developers. \url{https://www.html5rocks.com/en/tutorials/webgl/webgl_fundamentals/}
+
+\bibitem{MDN-5} \textit{WebGL model view projection - Web APIs | MDN.} (2022, 26 abril). MDN Web Docs. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_model_view_projection#clip_space}
+
+\bibitem{renderingcontextdoc} \textit{WebGLRenderingContext - Web APIs | MDN}. (2022, 20 enero). WebGLRenderingContext. \url{https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext}
 
 \end{thebibliography}
